chore(fetch): Sending fetch when user leave the page

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
     <title>Visitor guest tracker</title>
 </head>
 <body>
-
+    <p>Tracking visitor info.</p>
+    <script src="__dist__/index.js" ></script>
 </body>
 </html>
