--- a/example/index.html
+++ b/example/index.html
@@ -7,5 +7,8 @@
 <body>
     <p>Tracking visitor info.</p>
     <script src="__dist__/index.js" ></script>
+    <script type="text/javascript">
+       window.tracker.metaData.add('Ip', '127.0.0.1');
+    </script>
 </body>
 </html>
