Adding project token

--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
     <p>Tracking visitor info.</p>
+
+    <a href="./second_view.html"> Go to another view</a>
+    <script type="text/javascript">
+        window.foozleTracker = {
+            token: '103459be-d1f2-44bf-8415-4277e7adfe1f'
+        };
+    </script>
     <script src="__dist__/index.js" ></script>
     <script type="text/javascript">
        window.tracker.metaData.add('Ip', '127.0.0.1');
