sending actions and user info

--- a/example/index.html
+++ b/example/index.html
@@ -10,12 +10,13 @@
     <a href="./second_view.html"> Go to another view</a>
     <script type="text/javascript">
         window.foozleTracker = {
-            token: '103459be-d1f2-44bf-8415-4277e7adfe1f'
+            token: 'e07444fa-b9af-47e9-9ea4-581715932bd1'
         };
     </script>
     <script src="__dist__/index.js" ></script>
     <script type="text/javascript">
-       window.tracker.metaData.add('Ip', '127.0.0.1');
+       window.tracker.userInfo.add('ip', '127.0.0.1');
+       window.tracker.userInfo.add('country', 'Spain');
     </script>
 
     <script type="text/javascript">
