--- a/example/index.html
+++ b/example/index.html
@@ -10,13 +10,17 @@
     <a href="./second_view.html"> Go to another view</a>
     <script type="text/javascript">
         window.foozleTracker = {
-            token: '5cd97411-6f7f-428c-8d41-26d5d373745d'
+            token: 'e07444fa-b9af-47e9-9ea4-581715932bd1'
         };
     </script>
     <script src="__dist__/index.js" ></script>
     <script type="text/javascript">
        window.tracker.userInfo.add('ip', '127.0.0.1');
        window.tracker.userInfo.add('country', 'Spain');
+
+       // Simulate user create a new booking
+//       window.tracker.booking.add('bookingCode', '12345678890');
+//       window.tracker.booking.add('bookingStatus', 'CONF');
     </script>
 
     <script type="text/javascript">
