URL to fetch can be modify

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,8 @@
     <a href="./second_view.html"> Go to another view</a>
     <script type="text/javascript">
         window.foozleTracker = {
-            token: 'e07444fa-b9af-47e9-9ea4-581715932bd1'
+            token: 'a29e4a5c-f18f-4ac6-b6c6-987b55583a84',
+            url: 'http://127.0.0.1:8000/user'
         };
     </script>
     <script src="__dist__/index.js" ></script>
