--- a/example/index.html
+++ b/example/index.html
@@ -11,13 +11,18 @@
     <script type="text/javascript">
         window.foozleTracker = {
             token: 'a29e4a5c-f18f-4ac6-b6c6-987b55583a84',
-            url: 'http://127.0.0.1:8000/user'
+            url: 'http://127.0.0.1:8000/track',
+            actionsURL: 'http://127.0.0.1:8000/actions',
+            errorToken: '2e6ec399-3ad6-4316-a10e-eecc4c79f9ac',
+            event: 'load'
         };
     </script>
     <script src="__dist__/index.js" ></script>
     <script type="text/javascript">
        window.tracker.userInfo.add('ip', '127.0.0.1');
        window.tracker.userInfo.add('country', 'Spain');
+
+       window.tracker.metaData.add('channel', 'Webmobile');
 
        // Simulate user create a new booking
 //       window.tracker.booking.add('bookingCode', '12345678890');
@@ -26,8 +31,6 @@
 
     <script type="text/javascript">
        function simulateAddRoom() {
-           console.log('Adding rooms');
-
            window.tracker.actions.add('add room', {
                roomName: 'Double room',
                price: '200',
@@ -36,6 +39,8 @@
                boardName: 'Accommodation only',
                occupancy: '2-0-0'
            });
+
+           window.tracker.sendActions();
        }
     </script>
 </body>
